# SimpleConcurrency

./: CMakeLists.txt  README.md
.github/workflows/: unit-tests.yaml
include/: CMakeLists.txt
include/SimpleConcurrency/: CMakeLists.txt
include/SimpleConcurrency/Threading/: LambdaTask.hpp  Task.hpp  TaskRunner.hpp  ThreadPool.hpp  TickingTask.hpp
test/: CMakeLists.txt
test/src/: Main.cpp  TestThreadingTask.cpp  TestThreadingTaskRunner.cpp  TestThreadingThreadPool.cpp  TestThreadingTickingTask.cpp
